Contexto de usuário 100% consumindo API e puxando usuário para listagem de post.

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
                     <ul class="nav navbar-nav" ng-show="usuarioLogado">
                         <li>
-                            <a ng-href="#/usuarios/{{usuarioLogado.id}}/posts">Meus posts</a>
+                            <a ng-href="#/usuarios/{{usuarioLogado._id}}/posts">Meus posts</a>
                         </li>
                         <li>
                             <a ng-click="sair()">Sair</a>
