Uso do mongoose-paginate para paginação de resultados, visualização de um post (usuario não logado), layout para inserção de comentário em post, listagem de comentários de um post, registro de comentário em um post.

--- a/public/index.html
+++ b/public/index.html
@@ -69,5 +69,6 @@
          <script src="modulos/post/service.js"></script>
          <script src="modulos/post/cadastro/controller.js"></script>
          <script src="modulos/post/visualizacao/controller.js"></script>
+         <script src="modulos/post/visualizacao_usuario/controller.js"></script>
      </body>
 </html>
