Alteração e utilização do componente textAngular para escrita de posts

--- a/public/modulos/usuario/login/view.html
+++ b/public/modulos/usuario/login/view.html
@@ -1,7 +1,7 @@
 <form class="well">
   <div class="form-group">
     <label for="login">Login</label>
-    <input type="text" class="form-control" id="login" placeholder="Digite seu e-mail" ng-model="usuario.login">
+    <input type="text" class="form-control" id="login" placeholder="Digite seu e-mail" ng-model="usuario.login" autofocus>
   </div>
 
   <div class="form-group">
