--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
          <title>Blog JS Web</title>
          <meta charset="UTF-8">
          <link rel="stylesheet" type="text/css" href="libs/bootstrap/dist/css/bootstrap.min.css">
+         <link rel="stylesheet" type="text/css" href="libs/textAngular/dist/textAngular.css">
+         <link rel="stylesheet" type="text/css" href="libs/font-awesome/css/font-awesome.min.css">
          <link rel="stylesheet" type="text/css" href="modulos/post/css/posts.css">
      </head>
      <body ng-app="blogjs">
@@ -54,6 +56,9 @@
          <script src="libs/angular/angular.min.js"></script>
          <script src="libs/angular-route/angular-route.min.js"></script>
          <script src="libs/angular-bootstrap/ui-bootstrap.min.js"></script>
+         <script src="libs/textAngular/dist/textAngular-rangy.min.js"></script>
+         <script src="libs/textAngular/dist/textAngular-sanitize.min.js"></script>
+         <script src="libs/textAngular/dist/textAngular.min.js"></script>
          
          <script src="modulos/modulo.js"></script>
          <script src="modulos/menuController.js"></script>
