--- a/public/modulos/usuario/cadastro/view.html
+++ b/public/modulos/usuario/cadastro/view.html
@@ -1,7 +1,7 @@
 <form class="well">
   <div class="form-group">
     <label for="nome">Nome</label>
-    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" ng-model="usuario.nome">
+    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" ng-model="usuario.nome" autofocus>
   </div>
 
   <div class="form-group">
